# cmake-print-hash

./: CMakeLists.txt  README.md  main.cpp
cmake/: CMakeLists.txt  git_version.h.in
